# TaskManager

./: LICENSE  README.md  pyproject.toml  result  setup.py
input/: builds.yaml  tasks.yaml
manager/: cli.py  manager.py
manager/utils/: graph.py  loader.py
taskmanager/cli/: cli.py
taskmanager/manager/: __init__.py  manager.py
taskmanager/manager/utils/: graph.py  loader.py
taskmanager/tests/: __init__.py  tests.py
taskmanager/tests/test_input/: builds.yaml  tasks.yaml
taskmanager/tests/test_output/: output.txt
tests/: tests.py
tests/test_input/: builds.yaml  tasks.yaml
