[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmanager"
version = "1.0.0"
authors = [
  { name="Aleksandra Titova", email="st076009@student.spbu.ru" },
]
description = "A simple CLI tool for task management"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alxtitova/Task_Manager"
"Bug Tracker" = "https://github.com/alxtitova/Task_Manager/issues"

[tool.setuptools.packages]
find = {}